--- a/first-jsf-app/src/main/webapp/product.xhtml
+++ b/first-jsf-app/src/main/webapp/product.xhtml
@@ -2,7 +2,7 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:pp="http://primefaces.org/ui">
+      xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:jsp="http://xmlns.jcp.org/jsf/html">
 
 <h:head>
     <!-- Required meta tags -->
@@ -26,13 +26,18 @@
 
         <div class="row py-2">
             <div class="col-md-3 col-xs-12">
-                <ul class="list-group my-2">
-                    <li class="list-group-item active">Category 1</li>
-                    <li class="list-group-item">Category 2</li>
-                    <li class="list-group-item">Category 3</li>
-                    <li class="list-group-item">Category 4</li>
-                    <li class="list-group-item">Category 5</li>
-                </ul>
+                    <ul class="list-group my-2">
+                        <c:forEach items="#{categoryController.findAll()}" var="item">
+                            <li class="list-group-item"><h:outputText value="#{item.name}"/></li>
+                        </c:forEach>
+                    </ul>
+<!--                <ul class="list-group my-2">-->
+<!--                    <li class="list-group-item active">Category 1</li>-->
+<!--                    <li class="list-group-item">Category 2</li>-->
+<!--                    <li class="list-group-item">Category 3</li>-->
+<!--                    <li class="list-group-item">Category 4</li>-->
+<!--                    <li class="list-group-item">Category 5</li>-->
+<!--                </ul>-->
             </div>
 
             <div class="col-md-9 col-xs-12">
