--- a/first-jsf-app/src/main/webapp/category_form.xhtml
+++ b/first-jsf-app/src/main/webapp/category_form.xhtml
@@ -33,15 +33,9 @@
                                      value="#{categoryController.category.name}"
                                      placeholder="Enter name"/>
                     </div>
-                    <div class="form-group">
-                        <h:outputLabel value="Description"/>
-                        <h:inputText styleClass="form-control" id="description"
-                                     value="#{categoryController.category.description}"
-                                     placeholder="Enter description"/>
-                    </div>
 
                     <h:commandButton value="Submit" styleClass="btn btn-primary"
-                                     action="#{categoryController.savaCategory()}"/>
+                                     action="#{categoryController.saveCategory()}"/>
 
                 </h:form>
             </div>
