--- a/first-jsf-app/src/main/webapp/product.xhtml
+++ b/first-jsf-app/src/main/webapp/product.xhtml
@@ -1,8 +1,7 @@
 <html lang="en"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:jsp="http://xmlns.jcp.org/jsf/html">
+      xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
     <!-- Required meta tags -->
@@ -18,6 +17,8 @@
 
 <h:body>
 
+    <f:event listener="#{productController.preloadData}" type="preRenderView"/>
+
     <ui:include src="WEB-INF/fragments/navigation.xhtml">
         <ui:param name="pageName" value="Product"/>
     </ui:include>
@@ -26,18 +27,11 @@
 
         <div class="row py-2">
             <div class="col-md-3 col-xs-12">
-                    <ul class="list-group my-2">
-                        <c:forEach items="#{categoryController.findAll()}" var="item">
-                            <li class="list-group-item"><h:outputText value="#{item.name}"/></li>
-                        </c:forEach>
-                    </ul>
-<!--                <ul class="list-group my-2">-->
-<!--                    <li class="list-group-item active">Category 1</li>-->
-<!--                    <li class="list-group-item">Category 2</li>-->
-<!--                    <li class="list-group-item">Category 3</li>-->
-<!--                    <li class="list-group-item">Category 4</li>-->
-<!--                    <li class="list-group-item">Category 5</li>-->
-<!--                </ul>-->
+                <ui:repeat value="#{productController.categories}" var="cat">
+                    <h:link styleClass="list-group-item list-group-item-action active" value="#{cat.name}" outcome="/product">
+                        <f:param name="categoryId" value="#{cat.id}"/>
+                    </h:link>
+                </ui:repeat>
             </div>
 
             <div class="col-md-9 col-xs-12">
@@ -58,6 +52,10 @@
                         <h:column>
                             <f:facet name="header">Price</f:facet>
                             #{product.price}
+                        </h:column>
+                        <h:column>
+                            <f:facet name="header">Category</f:facet>
+                            #{product.categoryName}
                         </h:column>
                         <h:column>
                             <f:facet name="header">Action</f:facet>
