--- a/first-jsf-app/src/main/webapp/product_form.xhtml
+++ b/first-jsf-app/src/main/webapp/product_form.xhtml
@@ -39,6 +39,17 @@
                                      value="#{productController.product.price}"
                                      placeholder="Enter price"/>
                     </div>
+                    <div class="form-group">
+                        <h:outputLabel value="Category"/>
+                        <h:selectOneListbox size="1" styleClass="form-control" id="productCategory"
+                                            value="#{productController.product.categoryId}">
+                            <f:selectItems value="#{productController.categories}"
+                                           var="cat"
+                                           itemValue="#{cat.id}"
+                                           itemLabel="#{cat.name}"
+                                           itemLabelEscaped="true"/>
+                        </h:selectOneListbox>
+                    </div>
 
                     <h:commandButton value="Submit" styleClass="btn btn-primary"
                                      action="#{productController.saveProduct()}"/>
